@@ -14,6 +14,8 @@
 
     ${JSKOMMENT_SCRIPT}
 
+    ${ELI_SCRIPT}
+
   </body>
 </html>
 
