@@ -5,6 +5,7 @@
   <title>${BLOG_TITLE} - ${TITLE}</title>
   <link type="text/css" rel="stylesheet" media="screen" href="${BASE_URL}/${CSS_FILE}" title="${CSS_NAME}" />
   <link rel="stylesheet" type="text/css" media="all" href="${BASE_URL}/${JSKOMMENT_CSS}">
+  <link rel="stylesheet" type="text/css" media="all" href="${BASE_URL}/${ELI_CSS}">
   <link type="text/css" rel="stylesheet" media="screen" href="${BASE_URL}/${CSS_COLOR_FILE}" title="${CSS_NAME}" />
   <link type="text/css" rel="stylesheet" media="print" href="${BASE_URL}/print.css" />
   <link rel="alternate" type="application/rss+xml" title="${RSS_FEED_NAME}" href="${BASE_URL}/rss.xml" />
