@@ -1,3 +1,4 @@
   <aside id="sidebar">
+    ${ELI_CONTENT}
     ${SIDEBAR_CONTENT}
   </aside>
