@@ -1,0 +1,36 @@
+#eli_widget {
+width: 250px;
+margin: 0;
+padding: 0;
+border: thin solid #eee;
+border-radius: 12px;
+box-shadow: 2px 1px 5px #000;
+}
+
+#eli_widget header {
+text-align: left;
+border-bottom: 5px solid #fb6104;
+background-color: #43568e;
+border-top-left-radius: 12px;
+border-top-right-radius: 12px;
+color: #ffffff;
+}
+
+#eli_widget header img {
+margin: 5px;
+background-color: #ffffff;
+border-top-left-radius: 12px;
+float: left;
+}
+
+#eli_widget header p {
+margin: 0;
+line-height: 60px;
+}
+
+#eli_widget article {
+display: block;
+margin-bottom: 5px;
+padding: 5px;
+border-bottom: thin solid #eeeeee;
+}
