@@ -1,0 +1,3 @@
+    <div id="elitimeline">
+      <p>${ELI_STATUS}</p>
+    </div>
