@@ -1,0 +1,2 @@
+    <!-- EXPRESSION LIBRE IDENTICA system -->
+    <script type="text/javascript" src="${BASE_URL}/${eli_name}"></script>
