@@ -5,6 +5,7 @@ Current (0.2-dev)
 	  have a CSS to place all elements, then another one to adapt colors.
 	- Check variable to be unique in templates
 	- Update documentation
+	- Status from identica
 
 Version 0.1.1 (release 2013-01-17)
 	- Permit user to choose page ' suffix
